[gd_scene load_steps=3 format=3 uid="uid://b1xvduw1f032y"]

[ext_resource type="Script" uid="uid://bnxftib2aj2df" path="res://ui/in_arena_shop/shop_item/in_arena_shop_item.gd" id="1_p4fgh"]
[ext_resource type="Texture2D" uid="uid://bhqylbt87pmer" path="res://resources/icons/clodsire-Joyous.png" id="2_adwmk"]

[node name="InArenaShopItem" type="PanelContainer"]
process_mode = 3
anchors_preset = -1
anchor_right = 0.174
anchor_bottom = 0.594
offset_right = 0.551987
offset_bottom = 0.0879822
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p4fgh")

[node name="ShopItemContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="NameLabel" type="Label" parent="ShopItemContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_type_variation = &"ItemTitle"
text = "Health"

[node name="ItemIcon" type="TextureRect" parent="ShopItemContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_adwmk")
expand_mode = 5
stretch_mode = 6

[node name="BonusLabel" type="Label" parent="ShopItemContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_type_variation = &"ItemType"
text = "Bonus"

[node name="DescriptionLabel" type="Label" parent="ShopItemContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(164, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_type_variation = &"ItemDescription"
text = "DESCRIPTION"
autowrap_mode = 3

[node name="CostLabel" type="Label" parent="ShopItemContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_type_variation = &"ItemCost"
text = "PRICE"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
